<?xml version="1.0" encoding="utf-8"?>
<!-- 
  Copyright (C) 2009 Sebastian Dörner, Julius Müller, Johannes Steffen

  This file is part of Mango.

  Mango is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  Mango is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with Mango.  If not, see <http://www.gnu.org/licenses/>.

 -->
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@color/Orange"
	>
	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		>
		<ImageButton 
			android:id="@+create/helpButton"
			android:src="@drawable/help"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentRight="true" 
			/>
		<EditText
			android:id="@+create/nameEditField"
			android:maxLength="25"
			android:singleLine="true"
			android:textSize="18sp"
			android:layout_width="250px"
			android:layout_height="wrap_content"
			android:layout_below="@create/helpButton"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="5px"
			/>
		<TextView
			android:text="@string/Create_name_of_goal" 
			android:textSize="16sp"
			android:textStyle="bold"
			android:textColor="@color/DarkGray"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"			
			android:layout_above="@create/nameEditField"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="5px"
			/>
		<TextView 
			android:id="@+create/descriptionCaption"
			android:text="@string/Create_description"
			android:textStyle="bold"
			android:textSize="16sp"
			android:textColor="@color/DarkGray"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@create/nameEditField"
			android:layout_marginTop="5px"
			android:layout_centerHorizontal="true"
			/>
		<EditText 
			android:id="@+create/descriptionEditField"
			android:textSize="16sp"
			android:layout_width="250px"
			android:layout_height="wrap_content"
			android:layout_below="@create/descriptionCaption"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="5px"
			/>
		<TextView 
			android:id="@+create/deadLineCaption"
			android:text="@string/Create_deadline"
			android:textSize="16sp"
			android:textStyle="bold"
			android:textColor="@color/DarkGray"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@create/descriptionEditField"
			android:layout_marginTop="5px"
			android:layout_centerHorizontal="true"
			/>
		<DatePicker 
			android:id="@+create/deadlineDatePicker"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+create/deadLineCaption"
			android:layout_centerHorizontal="true"
			/>
		<ImageButton
			android:id="@+create/imagebutton"
			android:src="@drawable/imagebutton"
			android:scaleType="centerInside"
			android:layout_width="250px"
			android:layout_height="wrap_content"
			android:layout_below="@create/deadlineDatePicker"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="10px"
			android:layout_marginBottom="5px"
			/>
		<TextView
			android:id="@+create/weightCaption"
			android:text="@string/Create_weight"
			android:textSize="16sp"
			android:textStyle="bold"
			android:textColor="@color/DarkGray"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@create/imagebutton"
			android:layout_marginTop="5px"
			android:layout_centerHorizontal="true"
			/>
		<RadioGroup 
			android:id="@+create/weightRadioGroup"
			android:orientation="horizontal"
			android:layout_centerHorizontal="true"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_below="@create/weightCaption"
			>
			<RadioButton
				android:id="@+create/weightRadioButtonLow"
				android:text="@string/Create_low"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>
			<RadioButton
				android:id="@+create/weightRadioButtonMedium"
				android:text="@string/Create_normal"
				android:checked="true"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>
			<RadioButton 
				android:id="@+create/weightRadioButtonHigh"
				android:text="@string/Create_high"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>
		</RadioGroup>
		<TextView 
			android:id="@+create/progressCaption"
			android:text="@string/Progress"
			android:textSize="16sp"
			android:textStyle="bold"
			android:textColor="@color/DarkGray"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@create/weightRadioGroup"
			android:layout_marginTop="5px"
			android:layout_centerHorizontal="true"
			/>
		<de.mango.gui.HorizontalSlide
			android:id="@+create/progressBar"
			style="?android:attr/progressBarStyleHorizontal"
			android:max="100"
			android:layout_width="300px"
			android:layout_height="wrap_content"
			android:layout_below="@create/progressCaption"
			android:layout_centerHorizontal="true"
			android:layout_marginBottom="10px"
			/>
		<Button
			android:id="@+create/cancelButton"
			android:text="@string/Button_cancel"
			android:textSize="16sp"
			android:layout_height="fill_parent"
			android:layout_width="120px"
			android:layout_below="@create/progressBar"
			android:layout_alignLeft="@create/imagebutton"
			android:layout_marginBottom="10px"
			/>
		<Button
			android:id="@+create/saveButton"
			android:text="@string/Button_save"
			android:textSize="16sp"
			android:layout_width="120px"
			android:layout_height="fill_parent"
			android:layout_below="@create/progressBar"
			android:layout_alignRight="@create/imagebutton"
			android:layout_marginBottom="10px" 
			/>
	</RelativeLayout>
</ScrollView>
